<?xml version="1.0"?>
<package format="2">
  <name>km_utils</name>
  <version>0.1.0</version>
  <description>The km_utils package</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>

  <author>Kartik Mohta</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

